--- a/twitter-tools-core/pom.xml
+++ b/twitter-tools-core/pom.xml
@@ -209,6 +209,11 @@
       <version>2.6</version>
     </dependency>
     <dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-lang3</artifactId>
+	<version>3.2</version>
+	</dependency>
+    <dependency>
       <groupId>com.ning</groupId>
       <artifactId>async-http-client</artifactId>
       <version>1.7.5</version>
@@ -265,6 +270,11 @@
       <artifactId>jsoup</artifactId>
       <version>1.7.3</version>
     </dependency>
+    <dependency>
+	<groupId>com.googlecode.json-simple</groupId>
+	<artifactId>json-simple</artifactId>
+	<version>1.1</version>
+  </dependency>
   </dependencies>
 
 </project>
